<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attendance Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="attendance_tracker">Attendance Tracker</string>
    <string name="start">Start</string>
    <string name="logo">logo</string>
    <string name="welcome">WELCOME</string>
    <string name="login">Login</string>
    <string name="select_role">Select Role</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="view_student">View student</string>
    <string name="logout">Logout</string>
    <string name="add_student">Add student</string>
    <string name="add_faculty">Add faculty</string>
    <string name="view_faculty">View faculty</string>
    <string name="attendance_per_student">Attendance Per Student</string>
    <string name="registration">Registration</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_firstname">Enter Firstname</string>
    <string name="enter_password">Enter Password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="enter_lastname">Enter Lastname</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="select_department">Select Department</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_year">Select Year</string>
    <string name="mobile_number">Telephone Number</string>

    <string name="enter_mobile_number">Enter Mobile Number</string>


</resources>


