<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp" >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"

            android:src="@drawable/register"
            android:contentDescription="@string/registration"
            android:layout_marginStart="150dp"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/textViewFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/registration"
            android:textColor="#7842f5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="120dp"
            android:text="@string/firstname"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <requestFocus />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:layout_marginTop="150dp"
            android:hint="@string/enter_firstname"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:autofillHints=""
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:layout_marginTop="190dp"
            android:text="@string/lastname"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:layout_marginTop="220dp"
            android:hint="@string/enter_lastname"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextLastName"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="#FFFFFF"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:layout_marginTop="290dp"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:autofillHints=""
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="330dp"
            android:text="@string/address"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/Cancel_Button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="600dp"
            android:layout_marginLeft="200dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/roundedbuttonlog"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:layout_marginStart="200dp" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
           android:layout_marginTop="600dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:layout_marginStart="50dp" />

        <TextView
            android:id="@+id/MessageforRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RegisterButton"
            android:layout_marginTop="54dp"
            android:layout_toRightOf="@+id/textViewUserName"
            android:text=""
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@+id/textViewUserName" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="550dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:autofillHints=""
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="490dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:autofillHints=""
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="520dp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextaddr"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="370dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:paddingLeft="15dp"
            android:hint="@string/enter_address"
            android:inputType="textMultiLine"
            android:lines="10"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="240dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:text="@string/mobile_number"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_marginTop="460dp"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

</ScrollView>