<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.attendance.activity.MainActivity" >

    <Button
        android:id="@+id/buttonViewstudent"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginLeft="200dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/view_student"
        android:layout_marginStart="200dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/buttonlogout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundedbuttonlog"
        android:text="@string/logout"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/buttonviewfaculty"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="200dp"
        android:background="@drawable/roundedbutton1"
        android:text="@string/view_faculty"
        android:layout_marginStart="200dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/buttonaddfaculty"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/roundedbutton1"
        android:text="@string/add_faculty"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/buttonaddstudent"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/add_student"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/attendancePerStudentButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/attendance_per_student"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/smsbutton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/roundedbutton"
        android:text="Send Attendance to Students"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="380dp"
        android:onClick="sendMessage"
        android:textColor="@android:color/white"
        />



</RelativeLayout>

