<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp" >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"

            android:src="@drawable/register"
            android:contentDescription="@string/registration"
            android:layout_marginStart="150dp"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/textViewFormName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/registration"
            android:textColor="#7842f5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFormName"
            android:layout_marginTop="20dp"
            android:text="@string/firstname"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:layout_alignParentStart="true"
            android:paddingStart="10sp"
            tools:ignore="RtlSymmetry" />

        <requestFocus />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFirstName"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/enter_firstname"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:layout_alignParentStart="true"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextFirstName"
            android:layout_below="@+id/editTextFirstName"
            android:layout_marginTop="15dp"
            android:text="@string/lastname"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:paddingStart="10sp"
            tools:ignore="RtlSymmetry"
            android:layout_alignStart="@+id/editTextFirstName" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/textViewLastName"
            android:layout_below="@+id/textViewLastName"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/enter_lastname"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints=""
            android:layout_alignStart="@+id/textViewLastName" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextLastName"
            android:layout_marginTop="15dp"
            android:text="@string/contact_number"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:paddingStart="10sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/textViewPhone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:hint="@string/enter_contact_number"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextPhone"
            android:layout_below="@+id/editTextPhone"
            android:layout_marginTop="15dp"
            android:text="@string/address"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:layout_alignStart="@+id/editTextPhone"
            android:paddingStart="10sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/Cancel_Button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_above="@+id/MessageforRegister"
            android:layout_alignParentRight="true"
            android:layout_marginRight="18dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/roundedbuttonlog"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp" />

        <TextView
            android:id="@+id/MessageforRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RegisterButton"
            android:layout_marginTop="54dp"
            android:layout_toRightOf="@+id/textViewUserName"
            android:text=""
            android:textColor="#FFFFFF"
            android:layout_toEndOf="@+id/textViewUserName" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewUserName"
            android:layout_marginTop="14dp"
            android:text=""
            android:textColor="#FFFFFF"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/editTextaddr"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewUserName"
            android:background="@drawable/roundedtextview"
            android:ems="10"
            android:paddingLeft="15dp"
            android:hint="@string/enter_address"
            android:layout_alignParentEnd="true"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints=""
            android:inputType="textMultiLine"
            android:lines="10"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="100dp"
            android:layout_below="@+id/textViewPassword"
            android:text="@string/select_department"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingLeft="10sp"
            android:layout_alignParentStart="true"
            android:paddingStart="10sp"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/spinnerdept"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-35dp"
            android:layout_marginLeft="200dp"
            android:layout_alignParentLeft="true"
           android:layout_below="@+id/textView1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="200dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="560dp"
            android:layout_marginLeft="10dp"

            android:text="@string/select_year"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"

            android:textStyle="bold"
            android:textSize="20sp"


            tools:ignore="RtlSymmetry"
            android:layout_marginStart="10dp" />

        <Spinner
            android:id="@+id/spinneryear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="560dp"
            android:layout_marginLeft="130dp"
            android:layout_marginStart="130dp" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_below="@+id/spinneryear"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:layout_marginStart="50dp" />
    </RelativeLayout>

</ScrollView>