<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/clg"
    tools:context="com.android.attendance.activity.MainActivity" >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"

        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_marginStart="150dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="167dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#4287f5"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginStart="130dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/attendance_tracker"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#7842f5"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonstart"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="350dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/start"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

</RelativeLayout>
